--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "ArugaZ",
+  "author": "Tegar Ilyasa",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ArugaZ/whatsapp-bot.git"
+    "url": "https://github.com/TsunaJr/Tsukasa-2"
   },
   "bugs": {
-    "url": "https://github.com/ArugaZ/whatsapp-bot/issues"
+    "url": "https://github.com/TsunaJr/Tsukasa-2/issues"
   },
-  "homepage": "https://github.com/ArugaZ/whatsapp-bot",
+  "homepage": "https://github.com/TsunaJr/Tsukasa-2",
   "license": "ISC",
   "dependencies": {
     "@open-wa/wa-automate": "^3.1.0",
